--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-  meeting:
-    container_name: meeting
+  learning:
+    container_name: learning
     build:
       context: .
       args:
@@ -17,7 +17,7 @@ services:
       - epess-net
     labels:
       - traefik.enable=true
-      - traefik.http.routers.center.rule=Host(`center.epess.org`)
+      - traefik.http.routers.learning.rule=Host(`learning.epess.org`)
 networks:
   epess-net:
     driver: bridge
