--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "@apollo/client": "^3.11.8",
     "@clerk/nextjs": "^5.6.0",
     "@datadog/browser-logs": "^5.29.1",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@livekit/components-react": "^2.6.7",
     "@livekit/components-styles": "^1.1.4",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "apollo-upload-client": "^18.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "emoji-mart": "^5.6.0",
     "graphql": "^16.9.0",
     "livekit-client": "^2.6.0",
     "livekit-server-sdk": "^2.7.3",
