--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "clsx": "^2.1.1",
     "emoji-mart": "^5.6.0",
     "graphql": "^16.9.0",
+    "gsap": "^3.12.5",
     "livekit-client": "^2.6.0",
     "livekit-server-sdk": "^2.7.3",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "quill": "^2.0.2",
+    "quill-better-table": "^1.2.10",
     "react": "^18",
     "react-dom": "^18",
     "react-loading": "^2.0.3",
+    "react-quilljs": "^2.0.4",
     "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
