--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "quill": "^2.0.2",
-    "quill-better-table": "^1.2.10",
+    "quill-table-better": "^1.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-loading": "^2.0.3",
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^20",
+    "@types/quill": "^2.0.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
