--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-loading": "^2.0.3",
     "react-quilljs": "^2.0.4",
     "react-resizable-panels": "^2.1.6",
+    "react-ruler": "^0.15.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
