--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/no-explicit-any":"off",
     "import/no-anonymous-default-export": "off",
     "@next/next/no-img-element": "off",
-    "@typescript-eslint/no-unused-expressions":"off"
+    "@typescript-eslint/no-unused-expressions":"off",
+    "react-hooks/rules-of-hooks":"off"
   }
 }
