--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,14 +2,14 @@
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
     "@typescript-eslint/no-empty-object-type": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "warn",
-      {
-        "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_",
-        "ignoreRestSiblings": true
-      }
-    ],
+    // "@typescript-eslint/no-unused-vars": [
+    //   "warn",
+    //   {
+    //     "argsIgnorePattern": "^_",
+    //     "varsIgnorePattern": "^_",
+    //     "ignoreRestSiblings": true
+    //   }
+    // ],
     "prefer-const": "off",
     "@typescript-eslint/no-explicit-any":"off",
     "import/no-anonymous-default-export": "off",
