--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,16 @@ services:
         NODE_ENV: production
         NEXT_PUBLIC_GRAPHQL_URL: https://api.epess.org/v1/graphql
         NEXT_PUBLIC_LIVEKIT_URL: https://meet.epess.org
+        LIVEKIT_API_KEY: API9imca9hBiQ7w
+        LIVEKIT_API_SECRET: 75bhDbSrTpBTjWpcYRDM0fCAdcjHi3u6OFVNJe9Acx0
     environment:
       NODE_ENV: production
       NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: pk_test_aW4tY2hpbXAtOTcuY2xlcmsuYWNjb3VudHMuZGV2JA
       CLERK_SECRET_KEY: sk_test_sA5lsb1GHwUNXWQCp5ev70QkaoF5EmdAHNWiCGwZF6
       NEXT_PUBLIC_GRAPHQL_URL: https://api.epess.org/v1/graphql
       NEXT_PUBLIC_LIVEKIT_URL: https://meet.epess.org
+      LIVEKIT_API_KEY: API9imca9hBiQ7w
+      LIVEKIT_API_SECRET: 75bhDbSrTpBTjWpcYRDM0fCAdcjHi3u6OFVNJe9Acx0
     ports:
       - 5203:3000
     networks:
