--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "quill": "^2.0.2",
+    "quill-cursors": "^4.0.3",
     "quill-table-better": "^1.1.2",
     "react": "^18",
     "react-dom": "^18",
