--- a/package.json
+++ b/package.json
@@ -11,68 +11,71 @@
     "format:check": "prettier --check \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
-    "@apollo/client": "^3.11.8",
-    "@clerk/nextjs": "^5.6.0",
-    "@datadog/browser-logs": "^5.29.1",
+    "@apollo/client": "^3.12.3",
+    "@clerk/nextjs": "^6.9.2",
+    "@datadog/browser-logs": "^5.34.0",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
-    "@livekit/components-react": "^2.6.7",
+    "@livekit/components-react": "^2.6.10",
     "@livekit/components-styles": "^1.1.4",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.3",
+    "@radix-ui/react-popover": "^1.1.3",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.3",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.5",
     "apollo-upload-client": "^18.0.1",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emoji-mart": "^5.6.0",
-    "framer-motion": "^11.11.17",
-    "graphql": "^16.9.0",
+    "framer-motion": "^11.15.0",
+    "graphql": "^16.10.0",
     "graphql-ws": "^5.16.0",
     "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
-    "livekit-client": "^2.6.0",
-    "livekit-server-sdk": "^2.7.3",
-    "lucide-react": "^0.454.0",
-    "next": "14.2.16",
-    "quill": "^2.0.2",
+    "livekit-client": "^2.7.5",
+    "livekit-server-sdk": "^2.9.3",
+    "lucide-react": "^0.468.0",
+    "next": "15.1.0",
+    "quill": "^2.0.3",
     "quill-cursors": "^4.0.3",
-    "quill-table-better": "^1.1.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "quill-table-better": "^1.1.5",
+    "react": "^19",
+    "react-dom": "^19",
     "react-loading": "^2.0.3",
     "react-quilljs": "^2.0.4",
     "react-quiz-component": "^0.9.1",
-    "react-resizable-panels": "^2.1.6",
+    "react-resizable-panels": "^2.1.7",
     "react-ruler": "^0.15.1",
-    "react-spinners": "^0.14.1",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tinykeys": "^3.0.0",
     "ws": "^8.18.0",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/apollo-upload-client": "^18.0.0",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/quill": "^2.0.14",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/ws": "^8.5.13",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.16",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.0",
     "postcss": "^8",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.1",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5"
-  }
+  },
+  "workspaces": [
+    "quill-languagetool/*"
+  ]
 }
