--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "livekit-client": "^2.7.5",
     "livekit-server-sdk": "^2.9.3",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "next": "14.2.16",
     "quill": "^2.0.3",
     "quill-cursors": "^4.0.3",
     "quill-table-better": "^1.1.5",
-    "react": "^19",
-    "react-dom": "^19",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-loading": "^2.0.3",
     "react-quilljs": "^2.0.4",
     "react-quiz-component": "^0.9.1",
@@ -67,7 +67,9 @@
     "@types/quill": "^2.0.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/istanbul-lib-report": "^3.0.3",
     "@types/ws": "^8.5.13",
+    "@types/yargs-parser": "^21.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
