Refactor Dockerfile, update package configurations, and remove example files
- Updated Dockerfile to use consistent stage naming conventions.
- Modified package.json to include a prebuild script and adjusted workspaces configuration.
- Updated package-lock.json to reflect changes in dependencies and licenses.
- Removed example project files for quill-languagetool to streamline the repository.
- Adjusted TypeScript configuration to include new paths for quill-languagetool.
- Cleaned up code formatting and ensured consistent style across multiple files.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "npm run build:ci -w quill-languagetool",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -77,7 +78,10 @@
     "tailwindcss": "^3.4.16",
     "typescript": "^5"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-musl": "*"
+  },
   "workspaces": [
-    "quill-languagetool/*"
+    "quill-languagetool"
   ]
 }
