--- a/quill-languagetool/package.json
+++ b/quill-languagetool/package.json
@@ -21,15 +21,17 @@
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "build": "rollup -c && tsc -d --emitDeclarationOnly --noEmit false --declarationDir dist",
+    "build:ci": "rollup -c && tsc -d --emitDeclarationOnly --noEmit false --declarationDir ./quill-languagetool/dist",
     "start": "rollup -c -w",
-    "prepare": "npm run build",
+    "prepare": "npm run build:ci",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "nanohtml": "^1.10.0",
-    "quill-delta": "^5.1.0"
+    "quill-delta": "^5.1.0",
+    "ajv": "^8.12.0"
   },
   "peerDependencies": {
     "react": ">=16"
