--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         NEXT_PUBLIC_GRAPHQL_URL: https://api.epess.org/v1/graphql
         NEXT_PUBLIC_LIVEKIT_URL: https://meet.epess.org
         LIVEKIT_API_KEY: API9imca9hBiQ7w
+        NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: pk_test_aW4tY2hpbXAtOTcuY2xlcmsuYWNjb3VudHMuZGV2JA
         LIVEKIT_API_SECRET: 75bhDbSrTpBTjWpcYRDM0fCAdcjHi3u6OFVNJe9Acx0
     environment:
       NODE_ENV: production
