--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.3",
-    "@clerk/nextjs": "^6.9.2",
+    "@clerk/nextjs": "5.6.0",
     "@datadog/browser-logs": "^5.34.0",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
